--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Sour Gummy", sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #6991ff; 
   color: #fff;
   padding: 0;
